Adiciona link no botão

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="profile-photo">
                     <img src="./assets/img/perfil-instagram.jpg" alt="Profile Photo">
                 </div>
-                <a href="#" class="instagram-continue">Continuar como carloshrjunior</a>
+                <a href="https://www.instagram.com/" class="instagram-continue">Continuar como carloshrjunior</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="instagram-login not-account-container">
